css/styles.css
    body {
        color: black;
        background-color: rgb(245, 238, 238);
        display: flex;
        justify-content: center;

    }

    button:hover,
    button:focus,
    .button:hover,
    .button:focus {
        /* Hand Cursor */
        cursor: pointer;
        /* Reduce Opacity*/
        opacity: 0.8;
    }

    .button-class {
        background-color: red;
        border-radius: 80%;
        padding: 15px;
        margin: 5px;
    }



    .modal h1 {
        margin-top: 0;
    }

    .modal p {
        margin-bottom: 0;

    }

    /*Modal Styling*/
    #modal-container.is-visible {
        display: inline-block;
        position: fixed;
        padding: 15px;
        margin: auto;
        -webkit-box-sizing: border-box;
        box-sizing: border-box;
        top: 0;
        left: 0;
        width: 50%;
        height: 50%;
        max-width: 700px;
        background: #fff;
        text-align: center;

        /* to show it above other content */
        z-index: 999;

        /* to allow scrolling if the screen is not high enough*/
        overflow: auto;

        /* this is used to center the modal */
        display: grid;
        text-align: center;
    }

    .modal {
        margin: auto;
        display: inline-block;
        box-sizing: border-box;
        background: #fff;
        padding: 15px;
        width: 80%;
        max-width: 700px;
        text-align: center;
    }
    
    /*Close button for modal*/
    .modal-close {
        float: right;
        -webkit-appearance: none;
        border: 0;
        background: none;
        color: #777;
        text-decoration: underline;
    }
    /*Hide modal*/
    #modal-container {
        display: none;
    }
    
    /*Pokemon Sprite styling*/
    .pokemon-img {
        display: block;
        margin-left: auto;
        margin-right: auto;
        width: 50%;
    }

    /*Responsive view*/
    @media all and (max-width: 500px) {
        h1 {
            font-size: 30px;
        }
        h2 {
            font-size: 25px;
        }

        .button-class {
            padding: 10px;
        }
    }

    @media all and (min-width: 501px) and (max-width: 750px) {
        h1 {
            font-size: 36px;
        }
        h2 {
            font-size: 30px;
        }
        .button-class {
            padding: 12px;
        }
    }

    @media all and (max-width: 751px) {
        h1 {
            font-size: 42px;
        }
        h2 {
            font-size: 35px;
        }
    }

